Added a Wolfram|Alpha agent
Based on the Wolfram|Alpha Short Answers API.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ OPENAI_ORG_ID=""
 
 # This is not required; it's only used for calling Ought-internal models
 OUGHT_INFERENCE_API_KEY=""
+
+# Optional; to use any Wolfram|Alpha APIs
+WOLFRAM_API_KEY=""
