--- a/mypy.ini
+++ b/mypy.ini
@@ -43,7 +43,7 @@ ignore_missing_imports = True
 [mypy-nest_asyncio.*]
 ignore_missing_imports = True
 
-[mypy-ice.sqlite_shelf]
+[mypy-ice.caching.sqlite_shelf]
 ignore_errors = True
 
 [mypy-pandas.*]
